2013-01-23  Alexander V. Lukyanov <lavv17f@gmail.com>

	* FileAccess.cc, commands.cc, history.cc: don't add a slash if it's
	  already there.
	* xmap.cc: slightly better hash.
	* xarray.h: (xarray_p::qsort) new method.
	* StringSet.h: (StringSet::qsort) new method.
	* ResMgr.cc, ResMgr.h, Http.cc, resource.cc: use xlist and xmap to
	  manage settings (for better performance).

2013-01-17  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: allow UTC along with GMT in http timestamps.
	* Http.cc: fixed Content-Length handling after PROPFIND.

2013-01-16  Alexander V. Lukyanov <lavv17f@gmail.com>

	* DHT.cc: prefer responded nodes in search over not responded ones.
	* Torrent.cc, Torrent.h: add shutting_down_timer to fix a hang on
	  unresponsive trackers.
	* TorrentTracker.h: use 30 if interval<30.

2013-01-16  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: fixed error handling for new _Read semantics.

2013-01-15  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Http.cc: fixed rmdir for WebDAV by adding trailing slash to the path.

2014-01-10  Alexander V. Lukyanov <lavv17f@gmail.com>

	* Torrent.cc, Torrent.h: use SMTaskRef for FDCache.

2013-12-13  Alexander V. Lukyanov <lavv17f@gmail.com>

	* RateLimit.cc, RateLimit.h, ftpclass.cc: use RateLimit settings
	  to set maximum buffer size.
	* xstring.cc, xstring.h: (swap, set_length_no_z) new methods.
	* buffer.cc, buffer.h: (MoveDataHere) new method, optimize data
	  copying by swapping buffers.
	* FileCopy.cc: tune read delaying; add comments.
	* DummyProto.cc, DummyProto.h, FileAccess.h, FileCopy.cc, Fish.cc,
	  Fish.h, Http.cc, Http.h, LocalAccess.cc, LocalAccess.h, SFtp.cc,
	  SFtp.h, example1.cc, example2.cc, ftpclass.cc, ftpclass.h:
	  change FA::Read to use Buffer and MoveDataHere.
	* PollVec.cc, PollVec.h: (FDSetNotReady) new method.

2013-12-12  Alexander V. Lukyanov <lavv17f@gmail.com>

	* TimeDate.h: include sys/time.h to get struct timeval.
	* buffer.cc: don't shrink read buffer size.