@@ -7,6 +7,8 @@
 	* StringSet.h: (StringSet::qsort) new method.
 	* ResMgr.cc, ResMgr.h, Http.cc, resource.cc: use xlist and xmap to
 	  manage settings (for better performance).
+	* Torrent.cc, Torrent.h: save metadata and load if needed;
+	  (torrent:save-metadata) new setting.
 
 2013-01-17  Alexander V. Lukyanov <lavv17f@gmail.com>
 
